--- a/files/en-us/web/html/element/a/index.html
+++ b/files/en-us/web/html/element/a/index.html
@@ -42,8 +42,7 @@ browser-compat: html.elements.a
  </ul>
 
  <div class="notecard note">
- <h4>Notes</h4>
-
+ <p><strong>Note:</strong></p>
  <ul>
   <li><code>download</code> only works for <a href="/en-US/docs/Web/Security/Same-origin_policy">same-origin URLs</a>, or the <code>blob:</code> and <code>data:</code> schemes.</li>
   <li>
