--- a/files/en-us/web/html/element/dialog/index.html
+++ b/files/en-us/web/html/element/dialog/index.html
@@ -53,7 +53,7 @@ browser-compat: html.elements.dialog
 <p>This element includes the <a href="/en-US/docs/Web/HTML/Global_attributes">global attributes</a>.</p>
 
 <div class="notecard warning">
-<p>The <code>tabindex</code> attribute must not be used on the <code>&lt;dialog&gt;</code> element.</p>
+<p><strong>Warning:</strong> The <code>tabindex</code> attribute must not be used on the <code>&lt;dialog&gt;</code> element.</p>
 </div>
 
 <dl>
