--- a/files/en-us/web/html/element/font/index.html
+++ b/files/en-us/web/html/element/font/index.html
@@ -16,7 +16,7 @@ browser-compat: html.elements.font
 <p>The <strong><code>&lt;font&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element defines the font size, color and face for its content.</p>
 
 <div class="warning">
-<p><p><strong>Warning:</strong> Do not use this element. Use the CSS <a href="/en-US/docs/Web/CSS/CSS_Fonts">Fonts</a> properties to style text.</p>
+<p><strong>Warning:</strong> Do not use this element. Use the CSS <a href="/en-US/docs/Web/CSS/CSS_Fonts">Fonts</a> properties to style text.</p>
 </div>
 
 <h2 id="Attributes">Attributes</h2>
