--- a/files/en-us/web/html/element/index.html
+++ b/files/en-us/web/html/element/index.html
@@ -125,8 +125,7 @@ tags:
 <h2 id="Obsolete_and_deprecated_elements">Obsolete and deprecated elements</h2>
 
 <div class="notecard warning">
-  <h4>Warning</h4>
-  <p>These are old HTML elements which are deprecated and should not be used. <strong>You should never use them in new projects, and should replace them in old projects as soon as you can.</strong> They are listed here for completeness only.</p>
+  <p><strong>Warning:</strong> These are old HTML elements which are deprecated and should not be used. <strong>You should never use them in new projects, and should replace them in old projects as soon as you can.</strong> They are listed here for completeness only.</p>
 </div>
 
 <p>{{HTMLRefTable({"include":["Deprecated","Obsolete"]})}}</p>
