--- a/files/en-us/web/html/element/ul/index.html
+++ b/files/en-us/web/html/element/ul/index.html
@@ -54,7 +54,7 @@ browser-compat: html.elements.ul
 <dl>
  <dt>{{ htmlattrdef("compact") }} {{Deprecated_inline}}</dt>
  <dd><p>This Boolean attribute hints that the list should be rendered in a compact style. The interpretation of this attribute depends on the {{glossary("user agent")}}, and it doesn't work in all browsers.</p>
- <div class="warning"><strong>Warning:</strong> Do not use this attribute, as it has been deprecated: use <a href="/en-US/docs/Web/CSS">CSS</a> instead. To give a similar effect as the <code>compact</code> attribute, the CSS property {{cssxref("line-height")}} can be used with a value of <code>80%</code>.</div>
+ <div class="warning"><p><strong>Warning:</strong> Do not use this attribute, as it has been deprecated: use <a href="/en-US/docs/Web/CSS">CSS</a> instead. To give a similar effect as the <code>compact</code> attribute, the CSS property {{cssxref("line-height")}} can be used with a value of <code>80%</code>.</p></div>
  </dd>
  <dt>{{ htmlattrdef("type") }} {{Deprecated_inline}}</dt>
  <dd>This attribute sets the bullet style for the list. The values defined under HTML3.2 and the transitional version of HTML 4.0/4.01 are:
@@ -68,7 +68,7 @@ browser-compat: html.elements.ul
 
  <p>If not present and if no <a href="/en-US/docs/Web/CSS">CSS</a> {{ cssxref("list-style-type") }} property applies to the element, the user agent selects a bullet type depending on the nesting level of the list.</p>
 
- <div class="warning"><strong>Warning:</strong> Do not use this attribute, as it has been deprecated; use the <a href="/en-US/docs/Web/CSS">CSS</a> {{ cssxref("list-style-type") }} property instead.</div>
+ <div class="warning"><p><strong>Warning:</strong> Do not use this attribute, as it has been deprecated; use the <a href="/en-US/docs/Web/CSS">CSS</a> {{ cssxref("list-style-type") }} property instead.</p></div>
  </dd>
 </dl>
 
