--- a/files/en-us/web/html/global_attributes/id/index.html
+++ b/files/en-us/web/html/global_attributes/id/index.html
@@ -16,7 +16,7 @@ browser-compat: html.global_attributes.id
 <div>{{EmbedInteractiveExample("pages/tabbed/attribute-id.html","tabbed-shorter")}}</div>
 
 <div class="notecard warning">
-<p>This attribute's value is an opaque string: this means that web authors should not rely on it to convey human-readable information (although having your IDs somewhat human-readable can be useful for code comprehension, e.g. consider <code>ticket-18659</code> versus <code>r45tgfe-freds&amp;$@</code>).</p>
+<p><strong>Warning:</strong> This attribute's value is an opaque string: this means that web authors should not rely on it to convey human-readable information (although having your IDs somewhat human-readable can be useful for code comprehension, e.g. consider <code>ticket-18659</code> versus <code>r45tgfe-freds&amp;$@</code>).</p>
 </div>
 
 <p><code>id</code>'s value must not contain {{glossary("whitespace")}} (spaces, tabs etc.). Browsers treat non-conforming IDs that contain whitespace as if the whitespace is part of the ID. In contrast to the {{htmlattrxref("class")}} attribute, which allows space-separated values, elements can only have one single ID value.</p>
