--- a/files/en-us/web/html/element/base/index.html
+++ b/files/en-us/web/html/element/base/index.html
@@ -53,7 +53,7 @@ browser-compat: html.elements.base
 <p>This element's attributes include the <a href="/en-US/docs/Web/HTML/Global_attributes">global attributes</a>.</p>
 
 <div class="notecard warning">
-<p>If either of the following attributes are specified, this element <strong>must</strong> come before other elements with attribute values of URLs, such as {{HTMLElement("link")}}’s <code>href</code> attribute.</p>
+<p><strong>Warning:</strong> If either of the following attributes are specified, this element <strong>must</strong> come before other elements with attribute values of URLs, such as {{HTMLElement("link")}}’s <code>href</code> attribute.</p>
 </div>
 
 <dl>
