--- a/files/en-us/web/html/element/blink/index.html
+++ b/files/en-us/web/html/element/blink/index.html
@@ -14,7 +14,7 @@ browser-compat: html.elements.blink
 
 <p>The <strong><code>&lt;blink&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element is a non-standard element which causes the enclosed text to flash slowly.</p>
 
-<div class="warning">Do not use this element as it is <strong>obsolete</strong> and is bad design practice. Blinking text is frowned upon by several accessibility standards and the CSS specification allows browsers to ignore the <code>&lt;blink&gt;</code> element.</div>
+<div class="warning"><p><strong>Warning:</strong> Do not use this element as it is <strong>obsolete</strong> and is bad design practice. Blinking text is frowned upon by several accessibility standards and the CSS specification allows browsers to ignore the <code>&lt;blink&gt;</code> element.</p></div>
 
 <h2 id="DOM_interface">DOM interface</h2>
 
