--- a/files/en-us/web/html/element/caption/index.html
+++ b/files/en-us/web/html/element/caption/index.html
@@ -75,7 +75,7 @@ browser-compat: html.elements.caption
   <dd>The caption is displayed below the table.</dd>
  </dl>
 
- <div class="warning"><strong>Warning:</strong> Do not use this attribute, as it has been deprecated. The {{HTMLElement("caption")}} element should be styled using the <a href="/en-US/docs/Web/CSS">CSS</a> properties {{cssxref("caption-side")}} and {{cssxref("text-align")}}.</div>
+ <div class="warning"><p><strong>Warning:</strong> Do not use this attribute, as it has been deprecated. The {{HTMLElement("caption")}} element should be styled using the <a href="/en-US/docs/Web/CSS">CSS</a> properties {{cssxref("caption-side")}} and {{cssxref("text-align")}}.</p></div>
  </dd>
 </dl>
 
