--- a/files/en-us/web/html/element/image/index.html
+++ b/files/en-us/web/html/element/image/index.html
@@ -19,7 +19,7 @@ browser-compat: html.elements.image
 <p>The <strong><code>&lt;image&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element is an obsolete remnant of an ancient version of HTML lost in the mists of time; use the standard {{HTMLElement("img")}} element instead. Seriously, the specification even literally uses the words "Don't ask" when describing this element.</p>
 
 <div class="notecard warning">
-<p><strong>Do not use this! </strong>In order to display images, use the standard {{HTMLElement("img")}} element.</p>
+<p><strong>Warning:</strong> Do not use this element! In order to display images, use the standard {{HTMLElement("img")}} element.</p>
 </div>
 
 <p>While some browsers will attempt to automatically convert this into an {{HTMLElement("img")}} element, they won't always do so, and won't always succeed when they try, due to various ways in which the options can be interpreted. So just don't use it if you like your users.</p>
