--- a/files/en-us/web/html/element/nobr/index.html
+++ b/files/en-us/web/html/element/nobr/index.html
@@ -16,7 +16,7 @@ browser-compat: html.elements.nobr
 <p>The <strong><code>&lt;nobr&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element prevents the text it contains from automatically wrapping across multiple lines, potentially resulting in the user having to scroll horizontally to see the entire width of the text.</p>
 
 <div class="notecard warning">
-<p>Although this element is widely supported, it was <em>never</em> standard HTML, so you shouldn't use it. Instead, use the CSS property {{CSSxRef("white-space")}} like this:</p>
+<p><strong>Warning:</strong> Although this element is widely supported, it was <em>never</em> standard HTML, so you shouldn't use it. Instead, use the CSS property {{CSSxRef("white-space")}} like this:</p>
 </div>
 
 <pre class="brush: html">&lt;span style="white-space: nowrap;"&gt;Long line with no breaks&lt;/span&gt;</pre>
