--- a/files/en-us/web/html/global_attributes/contextmenu/index.html
+++ b/files/en-us/web/html/global_attributes/contextmenu/index.html
@@ -12,7 +12,7 @@ browser-compat: html.global_attributes.contextmenu
 <div>{{HTMLSidebar("Global_attributes")}}</div>
 
 <div class="warning">
-<p>The <a href="https://html.spec.whatwg.org/multipage/obsolete.html#attr-contextmenu">contextmenu attribute is obsolete</a> and will be removed from all browsers</p>
+<p><strong>Warning:</strong> The <a href="https://html.spec.whatwg.org/multipage/obsolete.html#attr-contextmenu">contextmenu attribute is obsolete</a> and will be removed from all browsers</p>
 </div>
 
 <p>The <code><strong>contextmenu</strong></code> <a href="/en-US/docs/Web/HTML/Global_attributes">global attribute</a> is the <a href="/en-US/docs/Web/HTML/Global_attributes/id"><strong>id</strong></a> of a {{HTMLElement("menu")}} to use as the contextual menu for this element.</p>
