--- a/files/en-us/web/html/global_attributes/draggable/index.html
+++ b/files/en-us/web/html/global_attributes/draggable/index.html
@@ -19,7 +19,7 @@ browser-compat: html.global_attributes.draggable
 </ul>
 
 <div class="notecard warning">
-<p>This attribute is <em>enumerated</em> and not <em>Boolean</em>. A value of <code>true</code> or <code>false</code> is mandatory, and shorthand like <code>&lt;img draggable&gt;</code> is forbidden. The correct usage is <code>&lt;img draggable="false"&gt;</code>.</p>
+<p><strong>Warning:</strong> This attribute is <em>enumerated</em> and not <em>Boolean</em>. A value of <code>true</code> or <code>false</code> is mandatory, and shorthand like <code>&lt;img draggable&gt;</code> is forbidden. The correct usage is <code>&lt;img draggable="false"&gt;</code>.</p>
 </div>
 
 <p>If this attribute is not set, its default value is <code>auto</code>, which means drag behavior is the default browser behavior: only text selections, images, and links can be dragged. For other elements, the event {{domxref('GlobalEventHandlers.ondragstart', 'ondragstart')}} must be set for drag and drop to work, as shown in this <a href="/en-US/docs/Web/API/HTML_Drag_and_Drop_API/Drag_operations">comprehensive example</a>.</p>
