Use a live sample for type=hidden example

--- a/files/en-us/web/html/element/input/index.html
+++ b/files/en-us/web/html/element/input/index.html
@@ -99,7 +99,10 @@ browser-compat: html.elements.input
   <tr>
    <td>{{HTMLElement("input/hidden", "hidden")}}</td>
    <td>A control that is not displayed but whose value is submitted to the server. There is an example in the next column, but it's hidden!</td>
-   <td><input id="userId" name="userId" type="hidden" value="abc123"></td>
+   <td id="examplehidden">
+    <pre class="brush: html hidden">
+&lt;input id="userId" name="userId" type="hidden" value="abc123"&gt;</pre>
+    {{EmbedLiveSample("examplehidden",200,55,"","", "nobutton")}}</td>
   </tr>
   <tr>
    <td>{{HTMLElement("input/image", "image")}}</td>
