HTML docs: suppress conversion of wide tables

--- a/files/en-us/web/html/attributes/max/index.html
+++ b/files/en-us/web/html/attributes/max/index.html
@@ -19,7 +19,7 @@ tags:
 
 <h3 id="Syntax">Syntax</h3>
 
-<table class="standard-table">
+<table class="no-markdown">
  <caption>Syntax for <code>max</code> values by input <code>type</code></caption>
  <thead>
   <tr>
@@ -75,7 +75,7 @@ tags:
 
 <p>For the {{htmlelement('progress')}} element, the <code>max</code> attribute describes how much work the task indicated by the <code>progress</code> element requires. If present, must have a value greater than zero and be a valid floating point number. For the {{htmlelement('meter')}} element, the <code>max</code> attribute defines the upper numeric bound of the measured range. This must be greater than the minimum value (<code><a href="/en-US/docs/Web/HTML/Attributes/min">min</a></code> attribute), if specified. In both cases, if omitted, the value defaults to 1.</p>
 
-<table class="standard-table">
+<table class="no-markdown">
  <caption>Syntax for <code>max</code> values for other elements</caption>
  <thead>
   <tr>
@@ -104,7 +104,7 @@ tags:
 
 <h2 id="Specifications">Specifications</h2>
 
-<table class="standard-table">
+<table class="no-markdown">
  <thead>
   <tr>
    <th scope="col">Specification</th>
