--- a/files/en-us/web/html/attributes/step/index.html
+++ b/files/en-us/web/html/attributes/step/index.html
@@ -19,7 +19,7 @@ tags:
 
 <h3 id="Syntax">Syntax</h3>
 
-<table class="standard-table">
+<table class="no-markdown">
  <caption>Default values for step</caption>
  <thead>
   <tr>
@@ -99,7 +99,7 @@ tags:
 
 <h2 id="Specifications">Specifications</h2>
 
-<table class="standard-table">
+<table class="no-markdown">
  <thead>
   <tr>
    <th scope="col">Specification</th>
