--- a/files/en-us/web/html/date_and_time_formats/index.html
+++ b/files/en-us/web/html/date_and_time_formats/index.html
@@ -422,7 +422,7 @@ tags:
 
 <p>While this format allows for time zones between -23:59 and +23:59, the current range of time zone offsets is -12:00 to +14:00, and no time zones are currently offset from the hour by anything other than <code>00</code>, <code>30</code>, or <code>45</code> minutes. This may change at more or less anytime, since countries are free to tamper with their time zones at any time and in any way they wish to do so.</p>
 
-<table class="standard-table">
+<table class="no-markdown">
  <caption>Examples of valid global date and time strings</caption>
  <thead>
   <tr>
