--- a/files/en-us/web/html/element/video/index.html
+++ b/files/en-us/web/html/element/video/index.html
@@ -107,7 +107,7 @@ browser-compat: html.elements.video
 
 <h2 id="Events">Events</h2>
 
-<table class="standard-table">
+<table class="no-markdown">
  <thead>
   <tr>
    <th scope="col">Event Name</th>
