--- a/files/en-us/web/html/global_attributes/enterkeyhint/index.html
+++ b/files/en-us/web/html/global_attributes/enterkeyhint/index.html
@@ -33,7 +33,7 @@ attributes to display a suitable enter key label (or icon).</p>
 
 <p>The <code>enterkeyhint</code> attribute is an enumerated attribute and only accepts the following values:</p>
 
-<table class="standard-table">
+<table class="no-markdown">
   <thead>
    <tr>
     <th>Value</th>
