--- a/files/en-us/web/html/attributes/crossorigin/index.html
+++ b/files/en-us/web/html/attributes/crossorigin/index.html
@@ -18,7 +18,7 @@ tags:
 
 <p>These attributes are enumerated, and have the following possible values:</p>
 
-<table class="standard-table">
+<table class="no-markdown">
 	<tbody>
 		<tr>
 			<td class="header">Keyword</td>
@@ -61,7 +61,7 @@ tags:
 
 <h2 id="Specifications">Specifications</h2>
 
-<table class="standard-table">
+<table class="no-markdown">
 	<thead>
 		<tr>
 			<th scope="col">Specification</th>
