--- a/files/en-us/web/html/attributes/min/index.html
+++ b/files/en-us/web/html/attributes/min/index.html
@@ -17,7 +17,7 @@ tags:
 
 <h3 id="Syntax">Syntax</h3>
 
-<table class="standard-table">
+<table class="no-markdown">
  <caption>Syntax for <code>min</code> values by input <code>type</code></caption>
  <thead>
   <tr>
@@ -73,7 +73,7 @@ tags:
 
 <p>For the {{htmlelement('meter')}} element, the <code>min</code> attribute defines the lower numeric bound of the measured range. This must be less than the minimum value (<code><a href="/en-US/docs/Web/HTML/Attributes/max">max</a></code> attribute), if specified. In both cases, if omitted, the value defaults to 1.</p>
 
-<table class="standard-table">
+<table class="no-markdown">
  <caption>Syntax for <code>min</code> values for other elements</caption>
  <thead>
   <tr>
@@ -117,7 +117,7 @@ tags:
 
 <h2 id="Specifications">Specifications</h2>
 
-<table class="standard-table">
+<table class="no-markdown">
  <thead>
   <tr>
    <th scope="col">Specification</th>
