--- a/files/en-us/web/html/attributes/minlength/index.html
+++ b/files/en-us/web/html/attributes/minlength/index.html
@@ -39,7 +39,7 @@ input:invalid:focus {
 
 <h2 id="Specifications">Specifications</h2>
 
-<table class="standard-table">
+<table class="no-markdown">
  <thead>
   <tr>
    <th scope="col">Specification</th>
