--- a/files/en-us/web/html/attributes/multiple/index.html
+++ b/files/en-us/web/html/attributes/multiple/index.html
@@ -151,7 +151,7 @@ select[multiple]:active {
 
 <h2 id="Specifications">Specifications</h2>
 
-<table class="standard-table">
+<table class="no-markdown">
  <thead>
   <tr>
    <th scope="col">Specification</th>
