--- a/files/en-us/web/html/element/audio/index.html
+++ b/files/en-us/web/html/element/audio/index.html
@@ -84,7 +84,7 @@ browser-compat: html.elements.audio
 
 <h2 id="Events">Events</h2>
 
-<table class="standard-table">
+<table class="no-markdown">
  <thead>
   <tr>
    <th scope="col">Event name</th>
