Listbox related role

--- a/files/en-us/web/accessibility/aria/roles/option_role/index.html
+++ b/files/en-us/web/accessibility/aria/roles/option_role/index.html
@@ -13,7 +13,7 @@ tags:
 <p>The <code>option</code> role is used to identify selections a user can make in a <a href="/en-US/docs/Web/Accessibility/ARIA/Roles/listbox_role">listbox</a>. These options are similar to the {{HTMLElement('option')}} elements in a {{HTMLElement('select')}} element, but they can contain images.</p>
 
 
-<p>All selectable options should have <code>aria-selected</code> match their state, <code>true</code> when selected and <code>false</code> when not. If an option is not selectable, <code>aria-selected</code> can be omitted. A disabled option can either omit the <code>aria-selected</code> option and be removed from the focus order, or mark <code>aria-disabled</code> as <code>true</code> and <code>aria-selected</code> as <code>false</code> to show the user that the option is present, albeit disabled.<p>
+<p>All selectable options should have <code>aria-selected</code> match their state, <code>true</code> when selected and <code>false</code> when not. If an option is not selectable, <code>aria-selected</code> can be omitted. A disabled option can either omit the <code>aria-selected</code> option and be removed from the focus order, or mark <code>aria-disabled</code> as <code>true</code> andzzzzzzzzzzzzzzzzz <code>aria-selected</code> as <code>false</code> to show the user that the option is present, albeit disabled.<p>
 
 	<p>The <code>option</code> role is for identifying selectable choices of a <code>listbox</code>. Options must be provided an accessible name. Generally, the accessible name for an option should come from the element's descendant content. Authors can also explicitly provide an accessible name by specifying <a href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-label_attribute">aria-label</a> or <a href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-labelledby_attribute">aria-labelledby</a> to the element with the <code>option</code> role. If using <code>aria-label</code> or <code>aria-labelledby</code>, and the option also displays a visible text label, authors must ensure they adhere to <a href="https://www.w3.org/WAI/WCAG21/Understanding/label-in-name.html">WCAG Success Criterion 2.5.3 Label in Name</a>.</p>
 
@@ -24,6 +24,8 @@ tags:
 <h4 id="Associated_Roles">Associated Roles</h4>
 
 <dl>
+	<dt><a href="/en-US/docs/Web/Accessibility/ARIA/Roles/listbox_role">listbox</a></dt>
+	<dd>An <code>option</code> <i>must</i> be contained in or owned by a <code>listbox</code></dd>
 </dl>
 
 <h4 id="States_and_Properties">States and Properties</h4>
