--- a/files/en-us/web/accessibility/aria/roles/option_role/index.html
+++ b/files/en-us/web/accessibility/aria/roles/option_role/index.html
@@ -31,38 +31,35 @@ tags:
 <h4 id="States_and_Properties">States and Properties</h4>
 
 <dl>
-	<dt>aria-checked</dt>
-	<dd></dd>
-	
 	<dt>aria-selected</dt>
-	<dd></dd>
+	<dd>Used to describe the selection state of the option. Required.</dd>
+
+	<dt>aria-checked</dt>
+	<dd>Used to describe the checked state when options are used in a multiple selection fashion. Supports <code>true</code>, <code>false</code> and <code>mixed</code>. Optional.</dd>
 
 	<dt>aria-posinset</dt>
-	<dd></dd>
+	<dd>Used to describe the position in the set of options when it does not match the DOM, such as virtual scrolling where only some options are present at a time. Optional.</dd>
 	
 	<dt>aria-setsize</dt>
-	<dd></dd>
+	<dd>Used in conjunction with <code>aria-posinset</code> to declare the total number of options. Optional.</dd>
 
 	<dt>aria-disabled</dt>
-	<dd></dd>
+	<dd>Used to indicate that the option is present but not editable. Optional.</dd>
 	
 	<dt>aria-hidden</dt>
-	<dd></dd>
+	<dd>Used to hide the option from accessibility tools. It should only be used to hide non-visible content or visible content if it improves the experience of assistive technology, such as redundant content. Optional.</dd>
 	
 	<dt>aria-invalid</dt>
-	<dd></dd>
+	<dd>Used to indicate that the value of the option is considered invalid by the application. Optional.</dd>
 
 	<dt>aria-busy</dt>
-	<dd></dd>
-
-	<dt>aria-grabbed</dt>
-	<dd></dd>
+	<dd>Used to indicate that an element is being modified, such as while it is loadingOptional.</dd>
+	
+	<dt>aria-labelledby</dt>
+	<dd>Used to indicate which element labels the option. The content of the option should be used instead where appropriate. Optional.</dd>
 	
 	<dt>aria-label</dt>
-	<dd></dd>
-
-	<dt>aria-labelledby</dt>
-	<dd></dd>
+	<dd>Used to label the option. If the label is present in the DOM, <code>aria-labelledby</code> should be used instead. Optional.</dd>
 </dl>
 	
 <p>(For further details and a full list of ARIA states and properties see the <a href="https://www.w3.org/TR/wai-aria-1.1/#option">ARIA <code>option</code> (role)</a> documentation.)</p>
