Fixes #7831 - Adds note for troubleshooting setup

--- a/files/en-us/webassembly/rust_to_wasm/index.html
+++ b/files/en-us/webassembly/rust_to_wasm/index.html
@@ -42,6 +42,10 @@ tags:
 
 <pre class="brush: bash no-line-numbers">$ cargo install wasm-pack</pre>
 
+<div class="notecard note">
+<p><strong>Note</strong>: In case you encounter errors in the environment setup, seek help for platform specific troubleshooting steps before proceeding further.</p>
+</div>
+
 <h2 id="Building_our_WebAssembly_package">Building our WebAssembly package</h2>
 
 <p>Enough setup; let's create a new package in Rust. Navigate to wherever you keep your personal projects, and type this:</p>
