--- a/files/en-us/webassembly/rust_to_wasm/index.html
+++ b/files/en-us/webassembly/rust_to_wasm/index.html
@@ -43,7 +43,7 @@ tags:
 <pre class="brush: bash no-line-numbers">$ cargo install wasm-pack</pre>
 
 <div class="notecard note">
-<p><strong>Note</strong>: In case you encounter errors in the environment setup, seek help for platform specific troubleshooting steps before proceeding further.</p>
+<p><strong>Note</strong>: In case you encounter errors in the environment setup, please seek help for platform specific troubleshooting steps before proceeding.</p>
 </div>
 
 <h2 id="Building_our_WebAssembly_package">Building our WebAssembly package</h2>
