--- a/files/en-us/web/html/element/input/index.html
+++ b/files/en-us/web/html/element/input/index.html
@@ -1253,7 +1253,7 @@ nameInput.addEventListener('invalid', () =&gt; {
      <li><code>type=image</code>: {{ARIARole("link")}}, {{ARIARole("menuitem")}}, {{ARIARole("menuitemcheckbox")}}, {{ARIARole("menuitemradio")}}, {{ARIARole("radio")}}, {{ARIARole("switch")}}</li>
      <li><code>type=radio</code>: {{ARIARole("menuitemradio")}}</li>
      <li><code>type=text</code> with no <code>list</code> attribute: {{ARIARole("combobox")}}, {{ARIARole("searchbox")}}, {{ARIARole("spinbutton")}}</li>
-     <li><code>type=color| date | datetime | datetime-local | email | file | hidden | month | number | password | range | reset | search | submit | tel | url | week</code> or <code>text</code> with <code>list</code> attribute: no <code>role</code> permitted</li>
+    <li><code style="word-break:break-word;">type=color|date|datetime|datetime-local|email|file|hidden|month|number|password|range|reset|search|submit|tel|url|week</code> or <code>text</code> with <code>list</code> attribute: no <code>role</code> permitted</li>
     </ul>
    </td>
   </tr>
