--- a/files/en-us/mozilla/firefox/releases/93/index.html
+++ b/files/en-us/mozilla/firefox/releases/93/index.html
@@ -35,6 +35,7 @@ tags:
 <h3 id="JavaScript">JavaScript</h3>
 
 <ul>
+  <li>The properties <code>imageOrientation</code> and <code>premultiplyAlpha</code> can be passed to the method {{domxref("createImageBitmap()")}} using the <code>options</code> object ({{bug(1367251)}}).</li>
   <li>{{jsxref("Intl.supportedValuesOf()")}} is now supported, allowing code to enumerate values supported by an implementation, This might be used, for example, to download a polyfill for just the missing category of values ({{bug(1670033)}}).</li>
 </ul>
 
