Add a word to the accessibility page
Fixes #9287

--- a/files/en-us/web/accessibility/index.html
+++ b/files/en-us/web/accessibility/index.html
@@ -44,7 +44,7 @@ tags:
  <dt><a href="/en-US/docs/Web/Accessibility/Mobile_accessibility_checklist">Mobile accessibility checklist</a></dt>
  <dd>This document provides a concise checklist of accessibility requirements for mobile app developers.</dd>
  <dt><a href="/en-US/docs/Web/Accessibility/Cognitive_accessibility">Cognitive accessibility</a></dt>
- <dd>When creating web content, be aware of how you can ensure that it is accessible to people cognitive impairments.</dd>
+ <dd>When creating web content, be aware of how you can ensure that it is accessible to people with cognitive impairments.</dd>
  <dt><a href="/en-US/docs/Web/Accessibility/Seizure_disorders">Accessibility for seizure disorders</a></dt>
  <dd>Some types of visual web content can induce seizures in people with certain brain disorders. Understand the types of content that can be problematic, and find tools and strategies to help you avoid them.</dd>
 </dl>
