--- a/files/en-us/web/html/element/input/index.html
+++ b/files/en-us/web/html/element/input/index.html
@@ -26,7 +26,7 @@ browser-compat: html.elements.input
 
 <p>The available types are as follows:</p>
 
-<table>
+<table class="no-markdown">
  <colgroup>
   <col>
   <col style="width: 50%;">
@@ -236,7 +236,7 @@ browser-compat: html.elements.input
 
 <p>This section provides a table listing all the attributes with a brief description. This table is followed by a list describing each attribute in greater detail, along with which input types they are associated with. Those that are common to most or all input types are defined in greater detail below. Attributes that are unique to particular input types—or attributes which are common to all input types but have special behaviors when used on a given input type—are instead documented on those types' pages. This element includes the <a href="/en-US/docs/Web/HTML/Global_attributes">global attributes</a>. Those with extra importance as it relates to <code>&lt;input&gt;</code> are highlighted.</p>
 
-<table>
+<table class="no-markdown">
  <caption>Attributes for the <code>&lt;input&gt;</code> element include <a href="/en-US/docs/Web/HTML/Global_attributes">global HTML attributes</a> and:</caption>
  <thead>
   <tr>
@@ -693,7 +693,7 @@ let hatSize = form.elements["hat-size"];
 
 <p>The following non-standard attributes are also available on some browsers. As a general rule, you should avoid using them unless it can't be helped.</p>
 
-<table>
+<table class="no-markdown">
  <thead>
   <tr>
    <th scope="col">Attribute</th>
@@ -805,7 +805,7 @@ let hatSize = form.elements["hat-size"];
 
 <h3 id="UI_pseudo-classes">UI pseudo-classes</h3>
 
-<table>
+<table class="no-markdown">
  <caption>Captions super relevant to the <code>&lt;input&gt;</code> element:</caption>
  <thead>
   <tr>
@@ -1023,7 +1023,7 @@ input[min][max] {}
 
 <p>Specific attributes and their values can lead to a specific error {{domxref('ValidityState')}}:</p>
 
-<table>
+<table class="no-markdown">
  <caption>Validity object errors depend on the {{htmlelement('input')}} attributes and their values:</caption>
  <thead>
   <tr>
