--- a/files/en-us/web/media/index.html
+++ b/files/en-us/web/media/index.html
@@ -36,6 +36,8 @@ tags:
  <dd>The Media Capabilities API lets you determine the encoding and decoding capabilities of the device your app or site is running on. This lets you make real-time decisions about what formats to use and when.</dd>
  <dt><a href="/en-US/docs/Web/API/Media_Streams_API">Media Capture and Streams API</a></dt>
  <dd>A reference for the API which makes it possible to stream, record, and manipulate media both locally and across a network. This includes using local cameras and microphones to capture video, audio, and still images.</dd>
+ <dt><a href="/en-US/docs/Web/API/Media_Session_API">Media Session API</a></dt>
+ <dd>The Media Session API provides a way to customize media notifications. It does this by providing metadata for display by the user agent for the media your web app is playing. It also provides action handlers that the browser can use to access platform media keys such as hardware keys found on keyboards, headsets, remote controls, and software keys found in notification areas and on lock screens of mobile devices.</dd>
  <dt><a href="/en-US/docs/Web/API/MediaStream_Recording_API">MediaStream Recording API</a></dt>
  <dd>The MediaStream Recording API lets you capture media streams to process or filter the data or record it to disk.</dd>
  <dt><a href="/en-US/docs/Web/API/Web_Audio_API">Web Audio API</a></dt>
