--- a/files/en-us/mozilla/firefox/releases/93/index.html
+++ b/files/en-us/mozilla/firefox/releases/93/index.html
@@ -37,6 +37,7 @@ tags:
 <ul>
   <li>The properties <code>imageOrientation</code> and <code>premultiplyAlpha</code> can be passed to the method {{domxref("createImageBitmap()")}} using the <code>options</code> object ({{bug(1367251)}}).</li>
   <li>{{jsxref("Intl.supportedValuesOf()")}} is now supported, allowing code to enumerate values supported by an implementation, This might be used, for example, to download a polyfill for just the missing category of values ({{bug(1670033)}}).</li>
+  <li><a href="/en-US/docs/Web/JavaScript/Reference/Classes/Class_static_initialization_blocks">Class <code>static</code> initialization blocks</a> are now supported, allowing more flexible initialization of {{jsxref("Classes/static", "static")}} properties ({{bug(1725689)}}).</li>
 </ul>
 
 <h4 id="removals_js">Removals</h4>
