--- a/files/en-us/mdn/about/index.html
+++ b/files/en-us/mdn/about/index.html
@@ -36,7 +36,7 @@ tags:
 
 <h4 id="Documentation_and_articles">Documentation and articles</h4>
 
-<p><strong>MDN content</strong> has been prepared with the contributions of authors from both inside and outside Mozilla. Unless otherwise indicated, the content is available under the terms of the <a href="https://creativecommons.org/licenses/by-sa/2.5/">Creative Commons Attribution-ShareAlike license</a> (CC-BY-SA), v2.5 or any later version.</p>
+<p><strong>Note:</strong> MDN content has been prepared with the contributions of authors from both inside and outside Mozilla. Unless otherwise indicated, the content is available under the terms of the <a href="https://creativecommons.org/licenses/by-sa/2.5/">Creative Commons Attribution-ShareAlike license</a> (CC-BY-SA), v2.5 or any later version.</p>
 
 <p>When reusing MDN content, you need to ensure two things:</p>
 
