--- a/files/en-us/mdn/contribute/markdown_in_mdn/index.html
+++ b/files/en-us/mdn/contribute/markdown_in_mdn/index.html
@@ -30,7 +30,7 @@ tags:
 
 <p>It's permissible for the info string to contain multiple words, like:</p>
 
-<pre>
+<pre class="brush: plain">
 ```fee fi fo fum
 // some example code
 ```
@@ -56,7 +56,7 @@ In MDN, writers will use code fences for example code blocks. They must specify 
 
 For example:
 
-<pre>
+<pre class="brush: plain">
 ```js
 const greeting = "I will get syntax highlighting";
 ```
@@ -72,7 +72,7 @@ const greeting = "I will get syntax highlighting";
 
 For example:
 
-<pre>
+<pre class="brush: plain">
 ```js example-good
 const greeting = "I'm a good example";
 ```
@@ -106,7 +106,7 @@ const greeting = "I'm a good example";
 
 <h5>Note</h5>
 
-<pre>
+<pre class="brush: plain">
 &gt; **Note:** This is how you write a note.
 &gt;
 &gt; It can have multiple lines.
@@ -130,7 +130,7 @@ const greeting = "I'm a good example";
 
 <h5>Warnings</h5>
 
-<pre>
+<pre class="brush: plain">
 &gt; **Warning:** This is how you write a warning.
 &gt;
 &gt; It can have multiple paragraphs.
@@ -154,7 +154,7 @@ const greeting = "I'm a good example";
 
 <h5>Callouts</h5>
 
-<pre>
+<pre class="brush: plain">
 &gt; **Callout:** **This is how you write a callout**.
 &gt;
 &gt; It can have multiple paragaphs.
@@ -180,7 +180,7 @@ const greeting = "I'm a good example";
 
 <p>For example, if we want to use "Warnung" for "Warning" in German, then in German pages we would write:</p>
 
-<pre>
+<pre class="brush: plain">
 &gt; Warnung: So schreibt man eine Warnung.
 </pre>
 
@@ -196,7 +196,7 @@ const greeting = "I'm a good example";
 
 <p>This example contains a code block.</p>
 
-<pre>
+<pre class="brush: plain">
 &gt; **Note:** This is how you write a note.
 &gt;
 &gt; It can contain code blocks.
@@ -252,7 +252,7 @@ const greeting = "I'm a good example";
 
 For example, this is a <code>&lt;dl&gt;</code>:
 
-<pre>
+<pre class="brush: plain">
 * term1
     * : My description of term1
 
@@ -316,7 +316,7 @@ On MDN, this would produce the following HTML:
 
 <p>As a workaround for cases where an author needs to associate multiple <code>&lt;dt&gt;</code> items with a single <code>&lt;dd&gt;</code>, consider providing them as a single <code>&lt;dt&gt;</code> that holds multiple terms, separated by commas, like this:<p>
 
-<pre>
+<pre class="brush: plain">
 * `param1`, `param2`, `param3`
     * : My description of params 1, 2, and 3
 </pre>
@@ -345,7 +345,7 @@ On MDN, this would produce the following HTML:
 
 <p>That is, MDN authors must use this style:</p>
 
-<pre>
+<pre class="brush: plain">
 | Heading 1 | Heading 2 | Heading 3 |
 |-----------|-----------|-----------|
 | cell 1    | cell 2    | cell 3    |
@@ -354,7 +354,7 @@ On MDN, this would produce the following HTML:
 
 <p>and not this style:</p>
 
-<pre>
+<pre class="brush: plain">
 Heading 1 | Heading 2 | Heading 3
  --- | --- | ---
 cell 1    | cell 2    | cell 3
@@ -408,7 +408,7 @@ cell 4    | cell 5    | cell 6
 
 <p>In GFM this will look like:</p>
 
-<pre>
+<pre class="brush: plain">
   | A heading 1        | A heading 2                                                                                                                                         | A heading 3        | A heading 4                                                                                                                                                              | A heading 5        | A heading 6        |
   | ------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------ | ------------------ |
   | Something shortish | Something much longer that really goes into a lot of detail about something, so much so that the table formatting starts to look bad in GFM format. | Something shortish | Another cell with lots of text in it, that also really goes into a lot of detail about something, so much so that the table formatting starts to look bad in GFM format. | Something shortish | Something shortish |
@@ -483,7 +483,7 @@ cell 4    | cell 5    | cell 6
 
 <p>Writers will be able to include KumaScript macro calls in prose content:</p>
 
-<pre>
+<pre class="brush: plain">
 
 The **`margin`** [CSS](https://developer.mozilla.org/en-US/docs/Web/CSS) property
 sets the margin area on all four sides of an element. It is a shorthand for
