--- a/files/en-us/mdn/contribute/processes/content_bug_triage/index.html
+++ b/files/en-us/mdn/contribute/processes/content_bug_triage/index.html
@@ -133,7 +133,7 @@ tags:
 
 <p>For example:</p>
 
-<pre>To whoever fixes this issue, it looks like the following is needed:
+<pre class="brush: plain">To whoever fixes this issue, it looks like the following is needed:
 
 * Update the first paragraph below heading X to correct the problem with Y
 * Add a description of X
