--- a/files/en-us/mdn/guidelines/css_style_guide/index.html
+++ b/files/en-us/mdn/guidelines/css_style_guide/index.html
@@ -26,7 +26,7 @@ tags:
 
 <p>To create a code example block on MDN, you wrap it in a <code>&lt;pre&gt;</code> element:</p>
 
-<pre>
+<pre class="brush: plain">
 &lt;pre&gt;p {
   color: red;
   /* This is my code example */
@@ -35,7 +35,7 @@ tags:
 
 This gives you the following output:
 
-<pre>p {
+<pre class="brush: plain">p {
   color: red;
   /* This is my code example */
 }</pre>
@@ -60,7 +60,7 @@ This gives you the following output:
 
 <p>For example, to provide CSS highlighting, you'd do this:</p>
 
-<pre>
+<pre class="brush: plain">
 &lt;pre class="brush: css"&gt;p {
   color: red;
   /* This is my code example */
