--- a/files/en-us/mdn/structures/compatibility_tables/index.html
+++ b/files/en-us/mdn/structures/compatibility_tables/index.html
@@ -461,7 +461,7 @@ git push</pre>
 <p>The compatibility data query should be specified in the page front-matter using the <code>browser-compat</code> key.
   For example, for the {{domxref("AbortController")}} this would be added as shown below:</p>
   
-<pre>---
+<pre class="brush: plain">---
 title: AbortController
 slug: Web/API/AbortController
 
