--- a/files/en-us/mdn/structures/macros/commonly-used_macros/index.html
+++ b/files/en-us/mdn/structures/macros/commonly-used_macros/index.html
@@ -245,7 +245,7 @@ tags:
 
 <h5 id="Syntax">Syntax</h5>
 
-<pre>\{{AvailableInWorkers}}
+<pre class="brush: plain">\{{AvailableInWorkers}}
 \{{AvailableInWorkers("notservice")}}</pre>
 
 <h5 id="Examples">Examples</h5>
