--- a/files/en-us/mdn/structures/page_types/api_reference_page_template/index.html
+++ b/files/en-us/mdn/structures/page_types/api_reference_page_template/index.html
@@ -15,7 +15,7 @@ browser-compat: path.to.feature.NameOfTheInterface
 
 <p>The frontmatter at the top of the page is used to define "page metadata". The values should be updated appropriately for the particular interface.</p>
 
-<pre>---
+<pre class="brush: plain">---
 title: NameOfTheInterface
 slug: Web/API/NameOfTheInterface
 tags:
