Remove a leftover `</span>`

--- a/files/en-us/mdn/contribute/howto/write_an_api_reference/index.html
+++ b/files/en-us/mdn/contribute/howto/write_an_api_reference/index.html
@@ -10,7 +10,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p>This guide takes you through all you need to know to write an API reference on MDN.</span></p>
+<p>This guide takes you through all you need to know to write an API reference on MDN.</p>
 
 <h2 id="Getting_prepared">Getting prepared</h2>
 
